[gd_scene load_steps=5 format=3 uid="uid://dflcrna6d1235"]

[ext_resource type="Theme" uid="uid://bkrlwg21fhprn" path="res://Autoloads/Resources/Themes/edit_button.tres" id="1_5v8vx"]
[ext_resource type="Script" uid="uid://bmp21qj65d8ax" path="res://Scenes/Main/SelectUIs/plays_button.gd" id="1_06qde"]
[ext_resource type="PackedScene" uid="uid://b4bws0qofhe6x" path="res://Scenes/PlaysUIContainer/PlayUI/plays_ui.tscn" id="2_1t30o"]
[ext_resource type="FontFile" uid="uid://cvfib27cf5q88" path="res://Autoloads/Resources/Fonts/Go Banana.ttf" id="6_yaaka"]

[node name="PlaysButton" type="Button"]
custom_minimum_size = Vector2(650, 320)
offset_right = 650.0
offset_bottom = 320.0
focus_behavior_recursive = 1
theme = ExtResource("1_5v8vx")
script = ExtResource("1_06qde")

[node name="PlaysUI" parent="." instance=ExtResource("2_1t30o")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 76.0
offset_top = 15.999999
offset_right = 788.0
offset_bottom = 158.0
scale = Vector2(0.7, 0.7)
size_flags_horizontal = 4
focus_behavior_recursive = 1
mouse_filter = 2

[node name="DescLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 118.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_behavior_recursive = 1
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_constants/line_separation = -8
theme_override_constants/paragraph_separation = 0
theme_override_fonts/normal_font = ExtResource("6_yaaka")
theme_override_font_sizes/normal_font_size = 56
bbcode_enabled = true
text = "Do nothing."
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1
